Changes since CEXP-2.2
 2016/06/21:
 - bfdstuff.c: pass pmbfd_relent_t to pmbfd_perform_relocation
   (preparation for ARM).
 2015/04/17:
 - recent bison needs %lex-param instead of #define YYLEX_PARAM
   Thanks to Anton Derbenev (BNL) for reporting the problem (lexer
   was not passed parser-context argument which led to a crash).
 2014/08/18:
 - bison now wants %pure-parser instead of %pure_parser.
 2014/03/06:
 - 64-bit issue: 0 is not always a NULL pointer! When passing to a varargs
   function then pass ((void*)0) and NOT simply 0.
 2014/02/24:
 - updated README to mention *sparc support* which is now *available* in pmbfd.
Changes since CEXP-2.1
 2013/01/28:
 - removed libtecla/Makefile (see next note) - conflicts with autotool-generated
   version.
 - renamed Makefile->makefile; Makefile in EXTRA_DIST results in
   the auto-generated Makefile (in the build-directory) to be distributed;
   even if we say EXTRA_DIST+=$(srcdir)/Makefile :-(
 - configure.ac: FIXED ill written bash conditional which resulted
   in binutils/libiberty always being configured (event when not present
   -> error).
 - binutils-2.23.diff: added hunk which fixes bfd/coffcode.h (missing
   #include directive).
 - configure.ac: DONT configure 'binutils' but configure individual
   subdirectories: binutils/libiberty, binutils/bfd, binutils/opcodes.
 2013/01/23:
 - INSTALL: document --enable-pthreads
 - cexp.c: renamed argv[0] to "cexpsh" when called from cexpsh()
   wrapper.
 - cexp.c: don't call 'hello' if there is a script or command
   string.
 - cexp.c: don't ever become interactive after script or command
   string from a nested call of cexpsh.
 - binutils-2.23.diff: added patch for ppc-dis.c which takes out
   stuff which relies on elf-bfd. pmbfd could add an 'owner' member
   to asection but it seems overkill just to support the PPC_VLE
   dialect in the very unlikely case of a non-ppc-elf target.
 - configure.ac: create 'binutils/bfd/bfd_stdint.h' (needed by